# News-Forge-AI

./: .gitignore  README.md  package-lock.json  tmpclaude-449c-cwd
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/agents/: audience.py  base.py  content_strategy.py  fact_verification.py  news_scout.py  opportunity.py  research.py  trend_scout.py  virality.py
backend/app/ai/orchestration/: executor.py  memory.py  planner.py  prompts.py  registry.py
backend/app/core/: background_tasks.py  config.py  database.py  errors.py  logging.py  pagination.py  rate_limit.py  security.py
backend/app/models/: __init__.py  ai.py  auth.py  content.py  creator_connection.py  creator_profile.py  news.py  opportunity.py  research.py  subscription.py  trend.py  usage.py  user.py
backend/app/repositories/: base.py  creator_connection_repository.py  creator_profile_repository.py  news_repository.py  opportunity_repository.py  research_repository.py  trend_repository.py
backend/app/schemas/: assistant.py  common.py  content_studio.py  creator_connection.py  creator_profile.py  fact_check.py  news.py  opportunity.py  research.py  subscription.py  trend.py
backend/app/services/: background_task_service.py  content_studio_service.py  creator_connection_service.py  entitlement_service.py  fact_check_service.py  news_ingestion_service.py  opportunity_service.py  profile_service.py  recommendation_service.py  research_service.py  trend_service.py  usage_service.py
backend/migrations/: README  env.py
(+171 files in other folders)
