[project]
name = "news-forge-ai-backend"
version = "0.1.0"
description = "Backend foundation for News Forge AI."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.5.0"
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
